--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Expose port
+# Expose port (Documentation only, actual port determined by ENV)
 EXPOSE 8000
 
-# Command to run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Set default port
+ENV PORT=8000
+
+# Command to run the application using shell to expand variables
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT} --reload"]
