--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,11 @@ services:
       - "8000"
     # ports:
     #   - "8000:8000"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:$${PORT:-8000}/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
       - PYTHONUNBUFFERED=1
       - DATABASE_URL=postgresql://kolozus:kolozus_strong_password@db:5432/kolozus_main
