--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     # ports:
     #   - "8000:8000"
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:$${PORT:-8000}/ || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://localhost:$${PORT}/ || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
