fix(deployment): Coolify-compatible healthcheck + code cleanup
- Remove hardcoded PORT from Dockerfile for Coolify compatibility
- Fix healthcheck to use \ with /health endpoint
- Increase timeout to 10s and add 40s start_period
- Add dedicated /health endpoint for container orchestration
- Remove 14 obsolete test/backup files and scripts directory
- Update .gitignore to prevent future test file commits

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,17 @@ venv/
 .venv/
 .pytest_cache/
 
+# Test & Debug Scripts
+*_test.py
+verify_*.py
+simulate_*.py
+stress_test.py
+final_smoke_test.py
+
+# Backup & Snapshot Files
+backup_*.json
+snapshot_*.json
+
 # Node / Next.js
 node_modules/
 .next/
@@ -23,3 +34,4 @@ coverage/
 
 # Docker
 data/
+
