refactor: rebuild Docker Compose with production-optimized configuration
BREAKING CHANGE: Complete Docker Compose rewrite

- Remove volume mounts in production (fixes import errors)
- Add docker-compose.dev.yml for development with hot reload
- Update backend Dockerfile: non-root user, no --reload in prod
- Update frontend Dockerfile: add wget for healthcheck
- Add proper healthchecks for all services (60s start_period for backend)
- Replace hardcoded secrets with environment variables
- Add .env.example with all required variables
- Rewrite DEPLOY.md with Coolify-specific instructions
- Use named volumes instead of bind mounts
- Configure proper networking with kolozus_network

Benefits:
✅ Production-ready: no dev dependencies or flags
✅ Secure: all secrets via env vars, non-root user
✅ Reliable: proper healthchecks with realistic timing
✅ Coolify-compatible: works with Coolify deployment flow
✅ Development-friendly: separate dev override file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .DS_Store
 *.log
 .env
+.env.local
 
 # Config
 ai_config.json
@@ -24,6 +25,9 @@ final_smoke_test.py
 # Backup & Snapshot Files
 backup_*.json
 snapshot_*.json
+*.old
+docker-compose.yml.old
+Dockerfile.old
 
 # Node / Next.js
 node_modules/
@@ -34,4 +38,5 @@ coverage/
 
 # Docker
 data/
+
 
