--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - "host.docker.internal:host-gateway"
     networks:
       - kolozus_network
+    labels:
+      - "coolify.port=8000"
 
   frontend:
     build:
@@ -69,6 +71,8 @@ services:
       start_period: 30s
     networks:
       - kolozus_network
+    labels:
+      - "coolify.port=3000"
 
 volumes:
   postgres_data:
