debug: add explicit Traefik router labels and verbose logging
- Added Host rule for Traefik router (kolozus.ubrokers.mx)
- Added entrypoint configuration (http)
- Changed service name to match router (kolozus-frontend)
- Added logging to frontend CMD for debugging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,9 @@ services:
       - kolozus_network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.kolozus-frontend.rule=Host(`kolozus.ubrokers.mx`)"
+      - "traefik.http.routers.kolozus-frontend.entrypoints=http"
+      - "traefik.http.services.kolozus-frontend.loadbalancer.server.port=3000"
 
 volumes:
   postgres_data:
