--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,32 @@
-# General
-.DS_Store
-*.log
-.env
-.env.local
-
-# Config
-ai_config.json
-
-# Python / FastAPI
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 venv/
-.venv/
-.pytest_cache/
+.env
+.venv
 
-# Test & Debug Scripts
-*_test.py
-verify_*.py
-simulate_*.py
-stress_test.py
-final_smoke_test.py
-
-# Backup & Snapshot Files
-backup_*.json
-snapshot_*.json
-*.old
-docker-compose.yml.old
-Dockerfile.old
-
-# Node / Next.js
+# Node
 node_modules/
-.next/
-dist/
-.vercel
-coverage/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
 # Docker
-data/
+docker-compose.override.yml
 
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
 
+# OS
+.DS_Store
+Thumbs.db
