--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
+    networks:
+      - default
 
   backend:
     build:
@@ -41,6 +43,9 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+    networks:
+      - coolify
+      - default
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
@@ -64,6 +69,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
+    networks:
+      - coolify
+      - default
     labels:
       - "traefik.enable=true"
       - "coolify.port=3000"
@@ -71,3 +79,7 @@ services:
 volumes:
   postgres_data:
     driver: local
+
+networks:
+  coolify:
+    external: true
