--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8000/health || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://127.0.0.1:8000/health || exit 1" ]
       interval: 15s
       timeout: 10s
       retries: 5
@@ -64,7 +64,7 @@ services:
       backend:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
+      test: [ "CMD-SHELL", "wget -qO- http://127.0.0.1:3000/api/health || exit 1" ]
       interval: 15s
       timeout: 10s
       retries: 3
@@ -74,6 +74,8 @@ services:
       - default
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`kolozus.ubrokers.mx`)"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
       - "coolify.port=3000"
 
 volumes:
