--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,11 +61,12 @@ services:
     environment:
       NODE_ENV: production
       PORT: ${FRONTEND_PORT:-3000}
+      HOSTNAME: "0.0.0.0"
     depends_on:
       backend:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://127.0.0.1:3000/api/health || exit 1" ]
+      test: [ "CMD-SHELL", "wget -qO- http://0.0.0.0:3000/api/health || exit 1" ]
       interval: 15s
       timeout: 10s
       retries: 3
