feat: Configure production routing (/api -> backend) and fix API URL usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,10 @@ services:
       - default
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`kolozus.ubrokers.mx`) && PathPrefix(`/api`)"
+      - "traefik.http.middlewares.backend-strip.stripprefix.prefixes=/api"
+      - "traefik.http.routers.backend.middlewares=backend-strip"
+      - "traefik.http.services.backend.loadbalancer.server.port=8000"
 
   frontend:
     build:
