refactor: Remove hardcoded Traefik labels to let Coolify manage domains/ports natively

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,8 +84,7 @@ services:
       - default
     labels:
       - "traefik.enable=true"
-      - "coolify.port=3000"
-      - "traefik.docker.network=coolify"
+      - "coolify.ignore"
 
 volumes:
   postgres_data:
