feat: prepare for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
-# Ejecuta ESTO:
-cat > .env.example << 'EOF'
-# Base de Datos
+# Base de Datos (Coolify genera automáticamente)
 POSTGRES_USER=
-POSTGRES_PASSWORD=  # ← Requerido en runtime
+POSTGRES_PASSWORD=
 POSTGRES_DB=
+POSTGRES_HOST=db
 
 # Backend
 DATABASE_URL=
+BACKEND_PORT=8000
 
-# IA
+# Frontend
+FRONTEND_PORT=3000
+NEXT_PUBLIC_API_URL=
+
+# IA - Elegir según perfil
 AI_PROVIDER=mock|groq|ollama
 AI_PROFILE=maestro|spark|guardian
 
@@ -17,4 +21,3 @@ GROQ_API_KEY=
 
 # Opcional - Solo si usas Ollama remoto
 OLLAMA_BASE_URL=
-EOF
