--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install --default-timeout=1000 --no-cache-dir -r requirements.txt
 COPY . .
 
 # Production mode (no --reload)
-CMD sh -c "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
+CMD sh -c "python init_db.py && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
