--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: pgvector/pgvector:pg16
     container_name: kolozus-db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-kolozus}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-kolozus_strong_password}
+      POSTGRES_DB: ${POSTGRES_DB:-kolozus_main}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -26,7 +26,15 @@ services:
       dockerfile: Dockerfile
     container_name: kolozus-backend
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      # Use decomposed variables if DATABASE_URL is not provided
+      POSTGRES_USER: ${POSTGRES_USER:-kolozus}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-kolozus_strong_password}
+      POSTGRES_HOST: db
+      POSTGRES_DB: ${POSTGRES_DB:-kolozus_main}
+      DATABASE_URL: ${DATABASE_URL} # Optional override
+
+      # Application Config
+      PORT: ${BACKEND_PORT:-8000}
       AI_PROVIDER: ${AI_PROVIDER}
       AI_PROFILE: ${AI_PROFILE}
       GROQ_API_KEY: ${GROQ_API_KEY}
