--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: pgvector/pgvector:pg16
     container_name: kolozus-db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-kolozus}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-kolozus_strong_password}
-      POSTGRES_DB: ${POSTGRES_DB:-kolozus_main}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -27,14 +27,14 @@ services:
     container_name: kolozus-backend
     environment:
       # Use decomposed variables if DATABASE_URL is not provided
-      POSTGRES_USER: ${POSTGRES_USER:-kolozus}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-kolozus_strong_password}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_HOST: db
-      POSTGRES_DB: ${POSTGRES_DB:-kolozus_main}
+      POSTGRES_DB: ${POSTGRES_DB}
       DATABASE_URL: ${DATABASE_URL} # Optional override
 
       # Application Config
-      PORT: ${BACKEND_PORT:-8000}
+      PORT: ${BACKEND_PORT}
       AI_PROVIDER: ${AI_PROVIDER}
       AI_PROFILE: ${AI_PROFILE}
       GROQ_API_KEY: ${GROQ_API_KEY}
