--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - kolozus_network
 
   # Backend API (FastAPI)
   backend:
@@ -47,8 +45,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    networks:
-      - kolozus_network
 
   # Frontend (Next.js)
   frontend:
@@ -62,7 +58,7 @@ services:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.frontend.loadbalancer.server.port=${FRONTEND_PORT}"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
     depends_on:
       - backend
     healthcheck:
@@ -70,13 +66,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    networks:
-      - kolozus_network
 
 volumes:
   postgres_data:
-
-
-networks:
-  kolozus_network:
-    driver: bridge
