DEBUG: Add verbose logging to frontend Dockerfile\n\nAdded:\n- Build step logging\n- List directory contents\n- Save build output to log file\n- Display full error on failure

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -34,7 +34,10 @@ ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
 # Build the Next.js application
-RUN npm run build
+RUN echo "=== Starting Next.js build ===" && \
+  echo "NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL" && \
+  ls -la && \
+  npm run build 2>&1 | tee build.log || (cat build.log && exit 1)
 
 # Production image, copy all the files and run next
 FROM base AS runner
